# hexagonal_driven.py

./: .gitignore  README.md  pyproject.toml
hexagonal_driven_py/application/commands/: add_pokemon_to_pokedex_service.py
hexagonal_driven_py/domain/example/dtos/: create_foo_dto.py
hexagonal_driven_py/domain/example/ports/use_cases/: create_pokemon_use_case.py
hexagonal_driven_py/domain/example/value_objects/: element.py
hexagonal_driven_py/domain/pokemon/dtos/add_pokemon_to_pokedex/: add_pokemon_to_pokedex_input_dto.py  add_pokemon_to_pokedex_output_dto.py
hexagonal_driven_py/domain/pokemon/entities/: pokedex.py
hexagonal_driven_py/domain/pokemon/ports/repositories/: pokedex_repository.py
hexagonal_driven_py/domain/pokemon/ports/use_cases/: add_pokemon_to_pokedex_use_case.py
hexagonal_driven_py/domain/pokemon/value_objects/: ability.py  damage.py  element.py  element_enum.py  level.py  name.py
tests/: test_hexagonal_driven_py.py
tests/unit/domain/pokemon/value_objects/: test_level.py
